# core

./: CONTRIBUTING.md  README.md  pyproject.toml
docs/: API.md  ARCHITECTURE.md
src/natureos/: __init__.py  design_brief.py  site.py  species.py
src/natureos/ai/: __init__.py  advisor.py  analyzer.py  models.py
src/natureos/data/: __init__.py  mena_species.py
src/natureos/engines/: __init__.py  biodiversity.py  carbon.py  habitat.py  interactions.py  optimizer.py  urban_heat.py  water.py
src/natureos/engines/engines/: water.py
